# napari-aisegcell

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_aisegcell/: __init__.py  _sample_data.py  _widget_batch_mode.py  _widget_layer_mode.py  napari.yaml
src/napari_aisegcell/_tests/: test_reader.py  test_sample_data.py  test_widget_layer_mode.py
src/napari_cellseg/: __init__.py  _sample_data.py  _widget_batch_mode.py  _widget_layer_mode.py  napari.yaml
src/napari_cellseg/_tests/: test_reader.py  test_sample_data.py  test_utils.py  test_widget_batch_mode.py  test_widget_layer_mode.py  test_writer.py
