[metadata]
name = napari-cellseg
version = 0.0.1
description = Deep learning-based segmentation for bight field images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CSDGroup/napari-cellseg
author = Daniel Schirmacher
author_email = dschirethz@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/CSDGroup/napari-cellseg/issues
    Documentation = https://github.com/CSDGroup/napari-cellseg#README.md
    Source Code = https://github.com/CSDGroup/napari-cellseg
    User Support = https://github.com/CSDGroup/napari-cellseg/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    pooch
    scikit-image
    light-the-torch
    cell_segmentation @ git+https://github.com/CSDGroup/cell_segmentation.git@main

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cellseg = napari_cellseg:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
